--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>rest-service-complete</artifactId>
+	<artifactId>feedback-rest-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>feedback-rest-service</name>
 	<description>get my ip</description>
